--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,11 +14,10 @@
     {% endfor %}
 </div>
 
-<form action="{{ url_for('preguntas') }}" method="get" class="mt-10">
-    <button type="submit" class="bg-yellow-300 text-blue-700 font-bold px-6 py-3 rounded-xl shadow-md
-                   hover:bg-yellow-400 hover:-translate-y-1 transition-all">
-        ¡Estoy listo!
-    </button>
-</form>
+
+<a href="{{ url_for('question') }}" class="bg-yellow-300 text-blue-700 font-bold px-6 py-3 rounded-xl shadow-md
+          hover:bg-yellow-400 hover:-translate-y-1 transition-all inline-block text-center">
+    ¡Estoy listo!
+</a>
 
 {% endblock %}
