--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,18 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}Prejecte Akinator{% endblock %}</title>
-
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-</head>
+  </head>
 
-<body class="min-h-screen bg-gradient-to-br from-yellow-300 to-red-500 text-white flex flex-col items-center p-6">
-    
-    <h1 class="text-4xl font-bold drop-shadow-lg mb-2">Akinator Pokémon</h1>
-    <h2 class="text-xl mb-8">Piensa en un Pokémon...</h2>
-
-    {% block content %}{% endblock %}
-</body>
+  <body
+    class="min-h-screen bg-linear-to-br from-yellow-300 to-red-500 text-white flex flex-col items-center p-6 gap-5"
+  >
+    <h1 class="text-7xl font-bold mb-2">Akinator Pokémon</h1>
+    <main class="w-full flex flex-col justify-start items-center gap-10">
+      {% block content %}{% endblock %}
+    </main>
+  </body>
 </html>
