--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,23 +1,26 @@
-{% extends "base.html" %}
+{% extends "base.html" %} {% block title %} Projecte Akinator - Inicio {%
+endblock%} {% block content %}
 
-{% block title %}Projecte Akinator - Inicio{% endblock %}
+<h2 class="text-4xl">Escoge uno de los siguientes Pokémons</h2>
 
-{% block content %}
-
-<div class="grid grid-cols-5 gap-6 w-full max-w-5xl
-            md:grid-cols-5 sm:grid-cols-2">
-    {% for p in pokemons %}
-    <div class="flex flex-col items-center transition-transform hover:scale-110">
-        <img src="{{ p.image }}" alt="{{ p.name }}" class="w-24 h-24 rounded-full bg-white p-2 shadow-lg">
-        <p class="mt-2 font-semibold text-white">{{ p.name }}</p>
-    </div>
-    {% endfor %}
+<div class="max-w-5xl grid grid-cols-3 md:grid-cols-8 gap-6">
+  {% for p in pokemons %}
+  <div class="flex flex-col items-center transition-transform hover:scale-110 cursor-pointer">
+    <img
+      src="{{ p.image }}"
+      alt="{{ p.name }}"
+      class="w-24 h-24 rounded-full bg-white p-2 shadow-lg"
+    />
+    <p class="mt-2 font-semibold text-white">{{ p.name }}</p>
+  </div>
+  {% endfor %}
 </div>
 
-
-<a href="{{ url_for('question') }}" class="bg-yellow-300 text-blue-700 font-bold px-6 py-3 rounded-xl shadow-md
-          hover:bg-yellow-400 hover:-translate-y-1 transition-all inline-block text-center">
-    ¡Estoy listo!
+<a
+  href="{{ url_for('question') }}"
+  class="bg-yellow-300 text-blue-700 font-bold px-6 py-3 rounded-xl shadow-md hover:bg-yellow-400 hover:-translate-y-1 transition-all inline-block text-center"
+>
+  ¡Estoy listo!
 </a>
 
 {% endblock %}
