--- a/app/templates/preguntas.html
+++ b/app/templates/preguntas.html
@@ -1,44 +1,41 @@
-{% extends "base.html" %}
-
-{% block title %}Akinator Pokémon - Preguntas{% endblock %}
-
-{% block content %}
-
-<div class="w-full h-screen flex justify-center items-center">
-    
-    <div class="w-4/5 max-w-4xl bg-white/20 backdrop-blur-md rounded-2xl p-6 shadow-xl
-                flex flex-row gap-6 items-center">
-
-        <div class="w-1/3 flex justify-center items-center">
-            <img src="{{ '/static/img/pokeimg.jpg' }}"
-                 alt="Imagen"
-                 class="max-h-[450px] w-full object-contain rounded-xl shadow-lg border-2 border-white">
-        </div>
-
-        <div class="w-2/3 text-white flex flex-col justify-center">
-            <h2 class="text-3xl font-bold mb-6 drop-shadow-md">
-                {{ question }}
-            </h2>
-
-            <form action="{{ url_for('question') }}" method="POST" class="flex flex-col gap-4">
-
-                <button name="respuesta" value="Y"
-                        class="bg-yellow-300 text-blue-700 font-bold py-3 rounded-xl shadow-md
-                               hover:bg-yellow-400 hover:-translate-y-1 transition-all">
-                    SÍ
-                </button>
-
-                <button name="respuesta" value="N"
-                        class="bg-yellow-300 text-blue-700 font-bold py-3 rounded-xl shadow-md
-                               hover:bg-yellow-400 hover:-translate-y-1 transition-all">
-                    NO
-                </button>
-
-            </form>
-        </div>
-
+{% extends "base.html" %} {% block title %}Akinator Pokémon - Preguntas{%
+endblock %} {% block content %}
+<div class="py-14">
+  <div
+    class="max-w-4xl bg-white/20 backdrop-blur-md rounded-2xl p-6 shadow-xl flex flex-row gap-6 items-center"
+  >
+    <div class="w-1/3 flex justify-center items-center">
+      <img
+        src="{{ '/static/img/pokeimg.jpg' }}"
+        class="max-h-[450px] w-full object-contain rounded-xl shadow-lg border-2 border-white"
+      />
     </div>
 
-</div>
+    <div class="w-2/3 text-white flex flex-col justify-center">
+      <h2 class="text-3xl font-bold mb-6 drop-shadow-md">{{ question }}</h2>
 
+      <form
+        action="{{ url_for('question') }}"
+        method="POST"
+        class="flex flex-col gap-4"
+      >
+        <button
+          name="respuesta"
+          value="Y"
+          class="bg-yellow-300 text-blue-700 font-bold py-3 rounded-xl shadow-md hover:bg-yellow-400 hover:-translate-y-1 transition-all"
+        >
+          SÍ
+        </button>
+
+        <button
+          name="respuesta"
+          value="N"
+          class="bg-yellow-300 text-blue-700 font-bold py-3 rounded-xl shadow-md hover:bg-yellow-400 hover:-translate-y-1 transition-all"
+        >
+          NO
+        </button>
+      </form>
+    </div>
+  </div>
+</div>
 {% endblock %}
