--- a/app/templates/resultado.html
+++ b/app/templates/resultado.html
@@ -1,23 +1,19 @@
-{% extends "base.html" %}
+{% extends "base.html" %} {% block title %}Akinator Pokémon – Resultado
+{%endblock %} {% block content %}
+<div class="flex flex-col items-center justify-center p-6 text-white">
+  <h1 class="text-6xl font-semibold mb-6">Resultado</h1>
 
-{% block title %}Akinator Pokémon – Resultado{% endblock %}
-
-{% block content %}
-<div class="flex flex-col items-center justify-center min-h-screen bg-gradient-to-br from-yellow-300 to-red-500 p-6 text-white">
-  <h1 class="text-4xl font-bold mb-6 drop-shadow-lg">Resultado</h1>
-  
   <p class="text-2xl mb-6">{{ result }}</p>
-  
+
   <div class="mb-8">
-    <img src="{{ pokemon }}"
-         alt="{{ result }}"
-         class="w-32 h-32 rounded-full bg-white p-3 shadow-xl">
+    <img src="{{ poke_img }}" class="w-56 h-56 p-3 rounded-full bg-white" />
   </div>
-  
-  <a href="{{ url_for('restart') }}"
-     class="bg-yellow-300 text-blue-700 font-bold px-6 py-3 rounded-xl shadow-md
-            hover:bg-yellow-400 hover:-translate-y-1 transition-all">
-    Comenzar Juego
+
+  <a
+    href="{{ url_for('restart') }}"
+    class="px-6 py-3 bg-yellow-300 text-blue-700 font-bold rounded-xl hover:bg-yellow-400 hover:-translate-y-1 transition-all"
+  >
+    Volver a Jugar
   </a>
 </div>
 {% endblock %}
