--- a/app/templates/resultado.html
+++ b/app/templates/resultado.html
@@ -1,19 +1,34 @@
-{% extends "base.html" %} {% block title %}Akinator Pokémon – Resultado
-{%endblock %} {% block content %}
-<div class="flex flex-col items-center justify-center p-6 text-white">
-  <h1 class="text-6xl font-semibold mb-6">Resultado</h1>
+{% extends "base.html" %}
+{% block title %}Akinator Pokémon – Resultado{% endblock %}
 
-  <p class="text-2xl mb-6">{{ result }}</p>
+{% block content %}
+<div class="flex flex-col items-center justify-center p-4 sm:p-6 text-white w-full">
 
-  <div class="mb-8">
-    <img src="{{ poke_img }}" class="w-56 h-56 p-3 rounded-full bg-white" />
+
+  <h1 class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl font-semibold mb-6 text-center">
+    Resultado
+  </h1>
+
+
+  <p class="text-xl sm:text-2xl mb-6 text-center px-4">
+    {{ result }}
+  </p>
+
+
+  <div class="mb-8 flex justify-center">
+    <img
+      src="{{ poke_img }}"
+      class="w-40 h-40 sm:w-48 sm:h-48 md:w-56 md:h-56 p-3 rounded-full bg-white shadow-lg object-cover"
+    />
   </div>
+
 
   <a
     href="{{ url_for('game.restart') }}"
-    class="px-6 py-3 bg-yellow-300 text-blue-700 font-bold rounded-xl hover:bg-yellow-400 hover:-translate-y-1 transition-all"
+    class="w-full sm:w-auto text-center px-6 py-3  bg-yellow-300 text-blue-700 font-bold rounded-xl  hover:bg-yellow-400 hover:-translate-y-1 transition-all"
   >
     Volver a Jugar
   </a>
+
 </div>
 {% endblock %}
