--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,21 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block title %}Prejecte Akinator{% endblock %}</title>
+    <title>{% block title %}Projecte Akinator{% endblock %}</title>
+
     <link
       rel="icon"
       href="/static/img/poke_icon.png"
       type="image/png"
       sizes="24x24"
     />
+
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
 
   <body
-    class="min-h-screen bg-linear-to-br from-yellow-300 to-red-500 text-white flex flex-col items-center p-6 gap-5"
+    class="min-h-screen bg-linear-to-br from-yellow-300 to-red-500 text-white flex flex-col items-center p-4 sm:p-6 gap-5"
   >
-    <h1 class="text-7xl font-bold mb-2">Akinator Pokémon</h1>
-    <main class="w-full flex flex-col justify-start items-center gap-10">
+    <h1 class="text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-bold text-center mb-4">
+      Akinator Pokémon
+    </h1>
+
+    <main class="w-full max-w-screen-lg flex flex-col items-center gap-10">
       {% block content %}{% endblock %}
     </main>
   </body>
