--- a/app/templates/preguntas.html
+++ b/app/templates/preguntas.html
@@ -1,28 +1,34 @@
-{% extends "base.html" %} {% block title %}Akinator Pokémon - Preguntas{%
-endblock %} {% block content %}
-<div class="py-14">
+{% extends "base.html" %}
+{% block title %}Akinator Pokémon - Preguntas{% endblock %}
+{% block content %}
+
+<div class="py-10 w-full flex justify-center">
   <div
-    class="max-w-4xl bg-white/20 backdrop-blur-md rounded-2xl p-6 shadow-xl flex flex-row gap-6 items-center"
+    class="w-full max-w-4xl bg-white/20 backdrop-blur-md rounded-2xl p-4 sm:p-6 shadow-xl flex flex-col md:flex-row gap-8 items-center"
   >
-    <div class="w-1/3 flex justify-center items-center">
+
+    <div class="w-full md:w-1/3 flex justify-center items-center">
       <img
         src="{{ '/static/img/pokeimg.jpg' }}"
-        class="max-h-[450px] w-full object-contain rounded-xl shadow-lg border-2 border-white"
+        class="max-h-[300px] sm:max-h-[350px] md:max-h-[450px] w-full object-contain rounded-xl shadow-lg border-2 border-white"
       />
     </div>
 
-    <div class="w-2/3 text-white flex flex-col justify-center">
-      <h2 class="text-3xl font-bold mb-6 drop-shadow-md">{{ question }}</h2>
+
+    <div class="w-full md:w-2/3 text-white flex flex-col justify-center">
+      <h2 class="text-2xl sm:text-3xl font-bold mb-6 drop-shadow-md text-center md:text-left">
+        {{ question }}
+      </h2>
 
       <form
         action="{{ url_for('game.question') }}"
         method="POST"
-        class="flex flex-col gap-4"
+        class="flex flex-col gap-4 w-full"
       >
         <button
           name="respuesta"
           value="Y"
-          class="bg-yellow-300 text-blue-700 font-bold py-3 rounded-xl shadow-md hover:bg-yellow-400 hover:-translate-y-1 transition-all"
+          class="bg-yellow-300 text-blue-700 font-bold py-3 rounded-xl shadow-md  hover:bg-yellow-400 hover:-translate-y-1 transition-all w-full"
         >
           SÍ
         </button>
@@ -30,7 +36,7 @@ endblock %} {% block content %}
         <button
           name="respuesta"
           value="N"
-          class="bg-yellow-300 text-blue-700 font-bold py-3 rounded-xl shadow-md hover:bg-yellow-400 hover:-translate-y-1 transition-all"
+          class="bg-yellow-300 text-blue-700 font-bold py-3 rounded-xl shadow-md  hover:bg-yellow-400 hover:-translate-y-1 transition-all w-full"
         >
           NO
         </button>
@@ -38,4 +44,5 @@ endblock %} {% block content %}
     </div>
   </div>
 </div>
+
 {% endblock %}
